Fix text on nav page thumbs when wrapped

--- a/src/app/views/pages/home/home.component.scss
+++ b/src/app/views/pages/home/home.component.scss
@@ -82,10 +82,11 @@
                 cursor: pointer;
 
                 .spacer {
-                    flex-grow: 1;
+                    height: 90%;
                 }
 
                 .title {
+                    line-height: 1.1;
                     font-size: xx-large;
                 }
             }
